2001-07-11 Kevin Vandersloot <kfv101@psu.edu>

	Added the beginnings of showing only favorite processes

	*procman.h: add enum for favorites

	*interface.c: added view: favorites menu item and add to
	favorites menu item.

	*callbacks.c (cb_add_to_favorites, cb_favorites_menu_clicked) :
	respond to new menu items.

	*procman.c (procman_data_new): initialize the favorites list.
	(procman_save_config): save the favorites.

	*proctable.c (insert_info_to_tree): check to see if process
	is a favorite.
	(proctable_update_list): add check to see if showing favorites
	and show all processes if so.

	*favorites.[c,h]: implement adding, saving, and checking for
	favorites.

	*Makefile.am: add favorites.[c,h]

2001-07-11 Kevin Vandersloot <kfv101@psu.edu>

	Added the ability to only view running processes.

	*procman.h: add enum for running processes.

	*proctable.c (get_process_status): added new boolean indicating
	whether the process is running or not
	(update_info): change this function to return an int. Return
	-1 if process needs to be removed, 0 if nothing, and 1 if it
	needs to be added.
	(insert_info_to_tree): only add to tree if needed
	(refresh_list): add or remove processes using return value
	from update_info.
	Also initialize info->node to be NULL since we can now maintain
	a processes info yet not necessarily display it.

	*interface.c (create_main_window): add a view: running_processes
	menu.

	*callbacks.c: add the necessary callbacks to the menus.

2001-07-11 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c, memmaps.c: hack around a bug in gal.
	Some more cosmetic changes.

2001-07-11 Kevin Vandersloot <kfv101@psu.edu>

	*prettytable.c: remove some unneeded stuff

	*proctable.c (update_info): free the string if it exists to
	fix a memory leak.

2001-07-10 Kevin Vandersloot <kfv101@psu.edu>

	*proctable.c (proctable_new): check to see that the tree
	is created from the spec file and bail out if not.
