@@ -1,4 +1,10 @@
-2001-07-11 Kevin Vandersloot <kfv101@psu.edu>
+2001-07-12 Kevin Vandersloot <kfv101@psu.edu>
+
+	*proctable.c (proctable_update_list): change the check
+	to a case statement for which processes to view to fix
+	a bug where only the user processes were shown.
+
+2001-07-12 Kevin Vandersloot <kfv101@psu.edu>
 
 	Added the beginnings of showing only favorite processes
 
